# mcu-max-c2

examples/mcu-max-uci/: main.c
src_mod/: CMakeLists.txt  mcumax_board.c  mcumax_board.h  mcumax_core.c  mcumax_core.h  mcumax_fen.c  mcumax_search.c  mcumax_types.h  mcumax_types.h_bak
src_mod2/: CMakeLists.txt  main.c  mcumax_board.c  mcumax_board.h  mcumax_core.c  mcumax_core.h  mcumax_fen.c  mcumax_fen.h  mcumax_search.c  mcumax_search.h  mcumax_types.h
src_mod3/: CMakeLists.txt  main.c  mcumax_api.h  mcumax_constants.h  mcumax_engine_core.c  mcumax_helpers.c  mcumax_init.c  mcumax_types.h
src_mod4/: CMakeLists.txt  main.c  mcu-max.c  mcu-max.h  mcumax_debug.c  mcumax_debug.h  mcumax_state.h
src_mod5/: main.c  mcu-max.c
src_mod6/: CMakeLists.txt  main.c  mcu-max.c
